--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: hel-bouk <hel-bouk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/10 10:25:31 by hel-bouk          #+#    #+#              #
-#    Updated: 2024/08/18 17:24:54 by hel-bouk         ###   ########.fr        #
+#    Updated: 2024/10/02 19:16:15 by hel-bouk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ SRC :=	ft_memset.c ft_isalpha.c ft_strjoin.c  ft_strmapi.c ft_isprint.c \
 	ft_strlcpy.c ft_split.c ft_putchar_fd.c ft_substr.c \
 	ft_strnstr.c ft_atoi.c ft_isalnum.c ft_putstr_fd.c \
 	ft_calloc.c ft_isdigit.c ft_strncmp.c ft_toupper.c ft_strtrim.c \
-	ft_strrchr.c ft_strlcat.c ft_tolower.c ft_strchr.c
+	ft_strrchr.c ft_strlcat.c ft_tolower.c ft_strchr.c get_next_line.c get_next_line_utils.c
 OBJS := $(SRC:.c=.o)
 BONUS := ft_lstnew_bonus.c ft_lstdelone_bonus.c ft_lstsize_bonus.c ft_lstiter_bonus.c  ft_lstclear_bonus.c \
 	 ft_lstmap_bonus.c ft_lstadd_front_bonus.c ft_lstadd_back_bonus.c ft_lstlast_bonus.c
